@@ -50,48 +50,48 @@ Class38=CWaveOutDialog
 Class39=CWavFileDlg
 
 ResourceCount=42
-Resource1=IDD_SKIN (Neutral (Default))
-Resource2=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource3=IDD_GEAR_DELAY (Neutral (Default))
-Resource4=IDD_PATDLG (Neutral (Default))
-Resource5=IDD_PSYBAR (Neutral (Default))
-Resource6=IDD_MACPROP (Neutral (Default))
+Resource1=IDD_GEAR_DELAY (Neutral (Default))
+Resource2=IDD_KEYCONFIG (Neutral (Default))
+Resource3=IDD_MACPROP (Neutral (Default))
+Resource4=IDD_GEAR_TRACKER (Neutral (Default))
+Resource5=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource6=IDD_GEAR_PSYCHOSC (Neutral (Default))
 Resource7=IDD_INST_GENERAL (Neutral (Default))
-Resource8=IDD_SONGPROP (Neutral (Default))
-Resource9=IDD_PSYBAR2 (Neutral (Default))
-Resource10=IDR_MACHINEFRAME (Neutral (Default))
-Resource11=IDD_KEYCONFIG (Neutral (Default))
-Resource12=IDD_PRESETS (Neutral (Default))
-Resource13=IDD_INST_EDITOR (Neutral (Default))
-Resource14=IDD_WAVEOUTCONFIG (Neutral (Default))
-Resource15=IDD_INSTRUMENT (Neutral (Default))
-Resource16=IDR_WAVEFRAME (Neutral (Default))
-Resource17=IDD_MIDI_INPUT
+Resource8=IDD_ENVDIALOG (Neutral (Default))
+Resource9=IDD_INST_EDITOR (Neutral (Default))
+Resource10=IDD_MIDI_MONITOR (Neutral (Default))
+Resource11=IDD_NEWVAL (Neutral (Default))
+Resource12=IDD_GEAR_FLANGER (Neutral (Default))
+Resource13=IDD_OUTPUT (Neutral (Default))
+Resource14=IDD_INFO (Neutral (Default))
+Resource15=IDD_WIREDIALOG (Neutral (Default))
+Resource16=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource17=IDD_DIRECTORIES (Neutral (Default))
 Resource18=IDR_POPUPMENU (Neutral (Default))
-Resource19=IDD_GEAR_FLANGER (Neutral (Default))
-Resource20=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource21=IDD_VSTRACK (Neutral (Default))
-Resource22=IDD_NEWMACHINE (Neutral (Default))
-Resource23=IDD_NEWVAL (Neutral (Default))
-Resource24=IDD_GREETS (Neutral (Default))
-Resource25=IDD_MASTERDLG (Neutral (Default))
-Resource26=IDD_GEAR_TRACKER (Neutral (Default))
-Resource27=IDD_MIDI_MONITOR (Neutral (Default))
-Resource28=IDD_DIRECTORIES (Neutral (Default))
+Resource19=IDD_GREETS (Neutral (Default))
+Resource20=IDD_MIDI_INPUT
+Resource21=IDD_GEAR_GAINER (Neutral (Default))
+Resource22=IDD_VSTRACK (Neutral (Default))
+Resource23=IDR_MACHINEFRAME (Neutral (Default))
+Resource24=IDR_WAVEFRAME (Neutral (Default))
+Resource25=IDD_SKIN (Neutral (Default))
+Resource26=IDD_GEARDISTORT (Neutral (Default))
+Resource27=IDD_MASTERDLG (Neutral (Default))
+Resource28=IDD_ABOUTBOX (Neutral (Default))
 Resource29=IDR_VSTFRAME (Neutral (Default))
-Resource30=IDD_MIDI_LEARN
-Resource31=IDD_OUTPUT (Neutral (Default))
-Resource32=IDD_GEAR_GAINER (Neutral (Default))
-Resource33=IDD_WIREDIALOG (Neutral (Default))
-Resource34=IDD_ABOUTBOX (Neutral (Default))
-Resource35=IDD_GEARDISTORT (Neutral (Default))
-Resource36=IDD_ENVDIALOG (Neutral (Default))
-Resource37=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource38=IDD_CONFIGURATION (Neutral (Default))
-Resource39=IDD_SEQUENCER (Neutral (Default))
-Resource40=IDD_INFO (Neutral (Default))
+Resource30=IDD_CONFIGURATION (Neutral (Default))
+Resource31=IDD_NEWMACHINE (Neutral (Default))
+Resource32=IDD_GEAR_FILTER (Neutral (Default))
+Resource33=IDD_PSYBAR2 (Neutral (Default))
+Resource34=IDD_PRESETS (Neutral (Default))
+Resource35=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource36=IDD_PATDLG (Neutral (Default))
+Resource37=IDD_MIDI_LEARN
+Resource38=IDD_SEQUENCER (Neutral (Default))
+Resource39=IDD_SONGPROP (Neutral (Default))
+Resource40=IDD_PSYBAR (Neutral (Default))
 Class40=CMidiInputDlg
-Resource41=IDD_GEAR_FILTER (Neutral (Default))
+Resource41=IDD_INSTRUMENT (Neutral (Default))
 Class41=CMidiLearn
 Resource42=IDR_MAINFRAME (Neutral (Default))
 
@@ -1190,7 +1190,7 @@ Control16=IDC_HEADERDLG,static,1082130436
 [DLG:IDD_SEQUENCER (Neutral (Default))]
 Type=1
 Class=CMainFrame
-ControlCount=31
+ControlCount=32
 Control1=IDC_FOLLOW,button,1342242819
 Control2=IDC_SEQLIST,listbox,1352730627
 Control3=IDC_INCSHORT,button,1342246784
@@ -1222,6 +1222,7 @@ Control28=IDC_DECLONG,button,1342246784
 Control29=IDC_SEQNEW,button,1342242816
 Control30=IDC_SEQSRT,button,1342242816
 Control31=IDC_RECORD_TWEAKS,button,1342251011
+Control32=IDC_SEQDUPLICATE,button,1342242816
 
 [DLG:IDD_DSOUNDCONFIG (Neutral (Default))]
 Type=1
